# phoenix-archived

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  build.rs  go.mod  go.sum
autogen/go/: README.md
autogen/go/monitor/: monitor.mock.go  monitor.pb.go
autogen/go/node/: mempool.pb.go  node.mock.go  node.pb.go  wallet.pb.go
autogen/go/phoenix/: note.pb.go  phoenix.pb.go  rusk.pb.go  transaction.pb.go
autogen/go/rusk/: consensus.pb.go  field.pb.go  keys.pb.go  note.pb.go  rusk.mock.go  rusk.pb.go  rusk.pb_test.go  transaction.pb.go
benches/: phoenix.rs
dusk-protobuf/: README.md  go.mod
dusk-protobuf/autogen/go/monitor/: monitor.mock.go  monitor.pb.go
dusk-protobuf/autogen/go/node/: node.mock.go  node.pb.go  wallet.pb.go
dusk-protobuf/autogen/go/phoenix/: phoenix.pb.go  rusk.pb.go  transaction.pb.go
dusk-protobuf/autogen/go/rusk/: consensus.pb.go  field.pb.go  keys.pb.go  rusk.mock.go  rusk.pb.go  transaction.pb.go
dusk-protobuf/autogen/go/rusk/github.com/dusk-protobuf/autogen/go/rusk/: consensus.pb.go  rusk.pb.go
dusk-protobuf/node/: README.md  mempool.proto  node.proto  wallet.proto
dusk-protobuf/phoenix/: README.md  note.proto  phoenix.proto
dusk-protobuf/rusk/: field.proto  note.proto  rusk.proto  transaction.proto
go-phoenix/: field.pb.go  go.mod  keys.pb.go  note.pb.go  phoenix.pb.go  transaction.pb.go
monitor/: README.md  monitor.proto
node/: README.md  mempool.pb.go  mempool.proto  node.pb.go  node.proto  wallet.pb.go  wallet.proto
phoenix/: Cargo.toml  README.md  note.proto  phoenix.proto  rusk.proto  transaction.proto
phoenix-cli/: Cargo.toml
phoenix-cli/src/: error.rs  lib.rs  main.rs  tests.rs
phoenix-lib/: Cargo.toml  build.rs
phoenix-lib/src/: error.rs  lib.rs  utils.rs
phoenix-lib/src/crypto/: mod.rs  tests.rs
phoenix-lib/src/db/: mod.rs  tests.rs
phoenix-lib/src/keys/: mod.rs  public.rs  secret.rs  tests.rs  view.rs
phoenix-lib/src/note/: idx.rs  mod.rs  nullifier.rs  obfuscated.rs  tests.rs  transparent.rs  variant.rs
phoenix-lib/src/rpc/: mod.rs  server.rs
phoenix-lib/src/transaction/: item.rs  mod.rs  tests.rs
phoenix-lib/src/zk/: gadgets.rs  mod.rs
phoenix-lib/src/zk/value/: value.rs
phoenix-server/: Cargo.toml
phoenix-server/src/: lib.rs  main.rs  tests.rs
phoenix/src/keys/: secret.rs  tests.rs
phoenix/src/rpc/: mod.rs  server.rs  types.rs
phoenix/src/transaction/: item.rs  tests.rs
phoenix/src/zk/: gadgets.rs
phoenix/src/zk/value/: value.rs
proto/: field.proto  note.proto
proto/autogen/go/phoenix/: phoenix.pb.go
proto/phoenix/: README.md  note.proto  phoenix.proto
rusk/: README.md  consensus.proto  field.proto  keys.proto  rusk.proto  transaction.proto
src/: crypto.rs  error.rs  hash.rs  lib.rs  main.rs  types.rs  utils.rs
src/crypto/: elgamal.rs  merkle.rs  mod.rs  tests.rs
src/db/: mod.rs  tests.rs
src/keys/: mod.rs  public.rs  secret.rs  tests.rs  view.rs
src/note/: idx.rs  mod.rs  nullifier.rs  obfuscated.rs  tests.rs  transparent.rs  variant.rs
src/note/obfuscated/: mod.rs
src/note/transparent/: mod.rs
src/rpc/: mod.rs  server.rs  tests.rs  types.rs
src/rpc/services/: mod.rs  phoenix.rs
src/rpc/types/: field.rs  keys.rs  mod.rs  note.rs  transaction.rs
src/transaction/: item.rs  mod.rs  tests.rs
src/zk/: circuit_marcos.rs  gadgets.rs  merkle.rs  mod.rs  public_inputs.rs  tests.rs  transaction.rs
src/zk/circuits/: execute.rs  mod.rs  send.rs  send_to_contract_obfuscated.rs  send_to_contract_transparent.rs  withdraw_from_contract_to_obfuscated.rs  withdraw_from_obfuscated.rs
src/zk/circuits/confidential/: mod.rs  send_to_contract_transparent.rs  withdraw_from_contract_to_obfuscated.rs  withdraw_from_obfuscated_to_contract.rs
src/zk/gadgets/: balance.rs  commitment.rs  merkle.rs  mod.rs  nullifier.rs  preimage.rs  range.rs  sanity.rs  sk_r.rs  sum.rs  transaction_balance.rs  variants.rs
src/zk/value/: mod.rs  phoenix_value.rs  tests.rs  value.rs
wallet/: wallet.proto
