[package]
name = "phoenix"
version = "2.0.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
edition = "2018"

[features]
default = [
    "circuit-merkle",
    "circuit-preimage",
    "circuit-balance",
    "circuit-nullifier",
    "circuit-sanity",
    "circuit-skr"
]
circuit-merkle = []
circuit-preimage = []
circuit-balance = []
circuit-nullifier = []
circuit-sanity = []
circuit-skr = []

[dependencies]
merlin = "2.0"
rand = "^0.7"
tonic = "^0.1"
sodiumoxide = "0.2"
sha2 = "0.8"
prost = "0.6"
tracing = "0.1"
hex = "^0.4"
kelvin = "0.11.2"
kelvin-radix = "0.7"
kelvin-hamt = "0.8"
bytehash = "0.2"
lazy_static = "1.4"
num-traits = "0.2"
unprolix = "0.1"
hades252 = { git = "https://github.com/dusk-network/Hades252.git" }

[dependencies.algebra]
git = "https://github.com/scipr-lab/zexe/"
features = ["parallel"]

[dependencies.poly-commit]
git = "https://github.com/scipr-lab/poly-commit"
branch = "master"

[dependencies.ff-fft]
git = "https://github.com/scipr-lab/zexe/"

[dependencies.plonk]
git = "https://github.com/dusk-network/plonk.git"
branch = "fast_prover_zexe"

[dependencies.plonk_gadgets]
git = "https://github.com/dusk-network/plonk_gadgets.git"
branch = "vlopes11/ecc_gadgets"

[build-dependencies]
tonic-build = { version = "0.1", default-features = false, features = ["transport"] }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"

[[bench]]
name = "phoenix"
harness = false

[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
debug = false
lto = true
overflow-checks = false
debug-assertions = false

[profile.bench]
opt-level = 3
incremental = false
codegen-units = 1
debug = false
lto = true
overflow-checks = false
debug-assertions = false

[profile.dev]
overflow-checks = false

# This is a temporary fix until we stop to use zexe; it's needed to replace
# in the dependency graph the library below with the revision specified.
# Unfortunately `patch` works matching just the URL - doesn't take in account
# revision or branches, see:  https://github.com/rust-lang/cargo/issues/5478
#
# A quick workaround is changing the URL with double slashes
[patch.'https://github.com/scipr-lab/zexe/']
algebra = { git = 'https://github.com/scipr-lab//zexe', rev="2c22b77" }
ff-fft = { git = "https://github.com/scipr-lab//zexe", rev="2c22b77" }
bench-utils = { git = "https://github.com/scipr-lab//zexe", rev="2c22b77" }

[patch.'https://github.com/scipr-lab/poly-commit']
poly-commit = { git = "https://github.com/scipr-lab//poly-commit", rev="77676213"}
