[package]
name = "phoenix"
version = "2.0.1"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
edition = "2018"

[features]
default = [
    "circuit-merkle",
    "circuit-preimage",
    "circuit-balance",
    "circuit-nullifier",
    "circuit-sanity",
    "circuit-skr"
]
circuit-merkle = []
circuit-preimage = []
circuit-balance = []
circuit-nullifier = []
circuit-sanity = []
circuit-skr = []

[dependencies]
bincode = "^1.2.1"
serde = "^1.0"
merlin = "2.0"
rand = "^0.7"
tonic = "^0.1"
sodiumoxide = "0.2"
sha2 = "0.8"
prost = "0.6"
tracing = "0.1"
hex = "^0.4"
kelvin = "0.12"
kelvin-radix = "0.8"
kelvin-hamt = "0.9"
bytehash = "0.3"
lazy_static = "1.4"
num-traits = "0.2"
unprolix = "0.1"
hades252 = { git = "https://github.com/dusk-network/Hades252.git", tag ="v0.5.0"}
dusk-bls12_381 = "0.1.0"
dusk-plonk = "0.1.0"
jubjub = {git = "https://github.com/dusk-network/jubjub.git"}
poseidon252 = { git = "https://github.com/dusk-network/Poseidon252" }

[dependencies.subtle]
version = "^2.2.1"
default-features = false

[build-dependencies]
tonic-build = { version = "0.1", default-features = false, features = ["transport"] }

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"

[[bench]]
name = "phoenix"
harness = false

[profile.release]
opt-level = 3
incremental = false
codegen-units = 1
debug = false
lto = true
overflow-checks = false
debug-assertions = false

[profile.bench]
opt-level = 3
incremental = false
codegen-units = 1
debug = false
lto = true
overflow-checks = false
debug-assertions = false

[profile.dev]
overflow-checks = false
