[package]
name = "phoenix-lib"
version = "0.1.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "2.0", features = ["serde"] }
merlin = "2.0"
rand = "^0.7"
tonic = "^0.1"
sodiumoxide = "0.2"
sha2 = "0.8"
prost = "0.6"
tracing = "0.1"

[dev-dependencies]
lazy_static = "1.4"
futures = "0.3"

[build-dependencies]
tonic-build = "0.1"

[dependencies.bulletproofs]
git = "https://github.com/dusk-network/bulletproofs.git"
branch = "dalek-v2"
features = ["yoloproofs"]

[dependencies.hades252]
git = "https://github.com/dusk-network/Hades252.git"
branch = "dalek-v2"
