[package]
name = "phoenix-server"
version = "0.1.0"
authors = ["Victor Lopez <victor@dusk.network>"]
edition = "2018"

[dependencies]
tonic = "^0.1"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tracing = "0.1"
tracing-subscriber = "0.1"
clap = "2.33"
phoenix-lib = { path = "../phoenix-lib" }
parking_lot = "0.10"

[dev-dependencies]
lazy_static = "1.4"
futures = "0.3"
